@@ -39,7 +39,6 @@ div.llamadas
 {
     overflow-y: auto;
     /*width: 100%;*/
-    height: 200px;
     background-color: #f0f0f0;
     border: 1px solid #999999;
 }
