@@ -97,6 +97,11 @@ fi
 /etc/logrotate.d/elastixdialer
 
 %changelog
+* Wed Jun 26 2013 Alex Villacis Lasso <a_villacis@palosanto.com>
+- FIXED: Campaign Monitoring: fix design flaw that requested very large datasets 
+  because of log entries on busy servers. Now log entries are not requested on
+  load, but only on demand, and only 100 at a time.
+
 * Mon Jun 24 2013 Alex Villacis Lasso <a_villacis@palosanto.com>
 - CHANGED: Dialer (ECCP): extend campaignlog request to request the last N 
   records instead of all of the log entries for a given date range.
@@ -129,7 +134,7 @@ fi
   leading to visualization of New Campaign form when there are no incoming 
   queues. Fixes Elastix bug #1533.
 
-* Wed Apr 10 2013 Alex Villacis Lasso <a_villacis@palosanto.com> 2.2.0
+* Wed Apr 10 2013 Alex Villacis Lasso <a_villacis@palosanto.com> 2.2.0-0
 - Bump version for release.
 - CHANGED: Campaign Monitoring, Dialer (ECCP): extend the getcampaignstatus and 
   getincomingqueuestatus requests to report statistic values for the queried
