@@ -1,3 +1,6 @@
+* Campaign Monitoring: fix design flaw that requested very large datasets 
+  because of log entries on busy servers. Now log entries are not requested on
+  load, but only on demand, and only 100 at a time.
 * Dialer (ECCP): extend campaignlog request to request the last N records 
   instead of all of the log entries for a given date range.
 * FIXED: Campaigns In, Campaigns Out, Agents, Callback Extensions, ECCP Users:
